// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for MolocoMCM's addToCart destination action: all fields 1`] = `
Object {
  "channel_type": "uast)d8y]fWK6e",
  "device": Object {
    "advertising_id": "uast)d8y]fWK6e",
    "ip": "uast)d8y]fWK6e",
    "language": "uast)d8y]fWK6e",
    "model": "uast)d8y]fWK6e",
    "os": "UAST)D8Y]FWK6E",
    "os_version": "uast)d8y]fWK6e",
    "ua": "uast)d8y]fWK6e",
    "unique_device_id": "uast)d8y]fWK6e",
  },
  "event_type": "ADD_TO_CART",
  "id": "uast)d8y]fWK6e",
  "items": Array [
    Object {
      "id": "uast)d8y]fWK6e",
      "price": Object {
        "amount": 15806569916661.76,
        "currency": "SGD",
      },
      "quantity": 1580656991666176,
      "seller_id": "uast)d8y]fWK6e",
    },
  ],
  "page_id": "uast)d8y]fWK6e",
  "session_id": "uast)d8y]fWK6e",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "user_id": "uast)d8y]fWK6e",
}
`;

exports[`Testing snapshot for MolocoMCM's addToCart destination action: required fields 1`] = `
Object {
  "channel_type": "uast)d8y]fWK6e",
  "event_type": "ADD_TO_CART",
  "id": "uast)d8y]fWK6e",
  "items": Array [
    Object {
      "id": "uast)d8y]fWK6e",
    },
  ],
  "page_id": "uast)d8y]fWK6e",
  "session_id": "uast)d8y]fWK6e",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "user_id": "uast)d8y]fWK6e",
}
`;
